Project - isAdmin support for user object - Admin Servlet and JSP. A button is visible for admin accounts which redirects to an admin panel to delete / make admin accounts. Data is displayed in a table - Management Servlet and Result JSP. Management handles post requests from the admin JSP. Result JSP displays user information and action before redirecting back to admin panel - Added user helper functions (name, id, all, delete, admin) - Check if you're modifying the session account before actioning to prevent any sort of concurrent modification and maintain accuracy

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -13,12 +13,17 @@ body {
 .container {
     width: 100%;
     max-width: 340px;
-    margin: auto;
+    margin: 40px;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.1);
     padding: 40px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: inline-block;
+}
+
+.table-container {
+    min-width: 800px;
 }
 
 h1 {
@@ -87,4 +92,57 @@ button:hover, .button:hover, input[type=submit]:hover {
     background: rgba(255, 255, 255, 0.1);
     color: #fff;
     text-decoration: none;
+}
+
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+th, td {
+    padding: 10px;
+    text-align: left;
+}
+
+th {
+    background-color: #333;
+    color: white;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.styled-table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    background: rgba(255, 255, 255, 0.05);
+}
+
+.styled-table thead tr {
+    background-color: rgba(255, 255, 255, 0.2);
+    color: #ffffff;
+    text-align: left;
+}
+
+.styled-table tbody tr {
+    border-bottom: thin solid rgba(255, 255, 255, 0.1);
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: rgba(255, 255, 255, 0.08);
+}
+
+.styled-table tbody tr:nth-of-type(odd) {
+    background-color: rgba(255, 255, 255, 0.12);
+}
+
+.styled-table tbody tr:hover {
+    background-color: rgba(255, 255, 255, 0.30);
 }
